--- a/src/index.css
+++ b/src/index.css
@@ -1,49 +1,42 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
-h1{
-  color: rgb(111, 6, 143)
+h1 {
+  color: rgb(111, 6, 143);
 }
 
-.inspiration-board { 
+
+
+.boards-container {
+  display: flex;
+  flex-direction: row; 
+  justify-content: space-evenly;
+}
+
+.inspiration-board {
   font-family: cursive;
+  margin-left: 125px;
 }
-  #heart {
-    position: relative;
-    width: 100px;
-    height: 90px;
-  }
-  #heart:before,
-  #heart:after {
-    position: absolute;
-    content: "";
-    left: 50px;
-    top: 0;
-    width: 50px;
-    height: 80px;
-    background: red;
-    border-radius: 50px 50px 0 0;
-    transform: rotate(-45deg);
-    transform-origin: 0 100%;
-  }
-  #heart:after {
-    left: 0;
-    transform: rotate(45deg);
-    transform-origin: 100% 100%;
-  }
 
-
-
-
-
+.boards__list{
+  height:200px; 
+  overflow-y:scroll;
+}
+.new-board-form__form{
+  
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 2em;
+    width: 100%;
+}
