--- a/src/App.css
+++ b/src/App.css
@@ -314,7 +314,6 @@ footer {
 }
 
 
-
 .h1 {
     margin: 50px auto;
     border: 5px solid #fff;
@@ -323,7 +322,7 @@ footer {
     position: relative;
     box-shadow: 0px 10px 7px rgba(0, 0, 0, 0.4), 0px 20px 10px rgba(0, 0, 0, 0.2);
 }
-.content__container {
+#dog-image {
     width: 250px;
     height: 250px;
 }
